IFS-2692 Update content after content review

--- a/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/the-princes-trust-terms-and-conditions.html
+++ b/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/the-princes-trust-terms-and-conditions.html
@@ -71,7 +71,7 @@
     </ul>
     <p>Innovate UK can ask you to repay the grant in the event:</p>
     <ul class="list list-bullet">
-        <li>a grant overpayment</li>
+        <li>of a grant overpayment</li>
         <li>you have provided false information in relation to this award</li>
         <li>you have been found to have committed a fraudulent act or an offence under the Bribery Act 2010</li>
         <li>a material element of the grant has been used for purposes unrelated to the project</li>
@@ -85,18 +85,18 @@
     <h2 class="heading-medium">7. Confidentiality and information management</h2>
     <p>Innovate UK has the right to ask for access to any additional information thought necessary by Innovate UK for this award. You must provide or allow access to this information within 2 weeks of a request.</p>
     <h2 class="heading-medium">8. State Aid</h2>
-    <p>These Young Innovator Awards are provided by Innovate UK on a ‘de minimis’ basis. This is a legal term by which the European Commission considers that public funding to a single recipient of up to €200,000 over a 3 year period has little or no impact on trade and competition, and does not require notification.</p>
+    <p>These Young Innovator Awards are provided by Innovate UK on a ‘<em>de minimis</em>’ basis. This is a legal term by which the European Commission considers that public funding to a single recipient of up to €200,000 over a 3 year period has little or no impact on trade and competition, and does not require notification.</p>
     <p>You must tell Innovate UK of any other public funding you have applied for or been awarded against the eligible costs covered by this offer. It is your responsibility to make sure that the total of public funding you are receiving at any one time for a project does not exceed the maximum amount of funding which is allowed.</p>
     <p>No subcontract can be made which would constitute a breach of State Aid obligations.</p>
     <h2 class="heading-medium">9. Intellectual property</h2>
     <p>Any intellectual property rights (IPRs) developed during or as a result of the project are owned by you.</p>
-    <p>You will make sure that you have the necessary rights to use or access third party IPR needed to carry out the project.</p>
+    <p>You will make sure that you have the necessary rights to use or access third party IPRs needed to carry out the project.</p>
     <h2 class="heading-medium">10. Exploitation of project results</h2>
     <p>Innovate UK expects you to provide a summary project report at the end of the award that details activities carried out, deliverables and planned next steps.</p>
     <h2 class="heading-medium">11. UK statutory framework</h2>
     <p>Innovate UK is subject to the requirements of the Freedom of Information Act 2000 and Data Protection Act 1998, as detailed on our corporate website.</p>
     <h2 class="heading-medium">12. Publication of information</h2>
-    <p>Innovate UK encourages you to seek your own publicity. You can mention the support you have been given by using the words ‘supported by Innovate UK’. However it is important that you do not use Innovate UK’s logo in any of your literature without getting permission in writing from your Innovation Champion first. Please consult the Innovate UK guide ‘Publicising your project: guidelines from Innovate UK.’ This is available on request from Innovate UK’s Press Office (<a href="mailto:pressoffice@innovateuk.gov.uk">pressoffice@innovateuk.gov.uk</a>).</p>
+    <p>Innovate UK encourages you to seek your own publicity. You can mention the support you have been given by using the words ‘supported by Innovate UK’. However it is important that you do not use Innovate UK’s logo in any of your literature without getting permission in writing from your Innovation Champion first. Please consult the Innovate UK guide ‘Publicising your project: guidelines from Innovate UK.’ This is available on request from Innovate UK’s Press Office: <a href="mailto:pressoffice@innovateuk.gov.uk">pressoffice@innovateuk.gov.uk</a>.</p>
     <h2 class="heading-medium">13. Issue resolution</h2>
     <p>Although your Innovation Champion will be your first point of contact, you can contact Emily Nott: <a href="mailto:Emily.Nott@innovateuk.gov.uk">Emily.Nott@innovateuk.gov.uk</a> if you need to discuss a matter directly.</p>
     <h2 class="heading-medium">14. Force majeure</h2>
