--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-review-send.html
@@ -126,7 +126,7 @@ Project title: [project title]
                     <textarea id="message" rows="60" data-editor="md" class="width-full">
 Thank you for applying for this competition. The review of your proposal by independent assessors is now complete and we are pleased to invite you to the next stage of the competition: an interview to present your project.
 
-Your interview will be held on [date]; at [time]. We are unable to change the time of your appointment. Please arrive 20 minutes early in case the interview panel is running ahead of schedule.
+Your interview will be held on [date] at [time]. We are unable to change the time of your appointment. Please arrive 20 minutes early in case the interview panel is running ahead of schedule.
 
 [or delete above line and add the line below]
 
@@ -135,7 +135,7 @@ Your interview will be held between [date] and [date]. We will email you by [dat
 [Respond to assessment feedback]
 [Review assessment feedback]
 
-The assessors' comments and scores are available for you to read by signing into the Innovation Funding Service (IFS). This feedback is intended to be constructive, highlighting the strengths and weaknesses of your application. Different assessors may give conflicting opinions, which reflects their varying interpretations of your proposal.
+The assessors' comments and scores are available for you to read by signing into the [Innovation Funding Service](https://auth.apply-for-innovation-funding.service.gov.uk/idp/profile/SAML2/Redirect/SSO?execution=e2s1) (IFS). This feedback is intended to be constructive, highlighting the strengths and weaknesses of your application. Different assessors may give conflicting opinions, which reflects their varying interpretations of your proposal.
 
 [Delete if not applicable:]
 
@@ -148,7 +148,7 @@ You can respond to this feedback in writing if you wish. Your response will be r
 
 **Submit your presentation**
 
-Send the slides for your presentation to competitionenquiries@innovateuk.gov.uk by midday on [date]. You will not be able to make any edits after this date.
+Send the slides for your presentation to [competitionenquiries@innovateuk.gov.uk](mailto:competitionenquiries@innovateuk.gov.uk) by midday on [date]. You will not be able to make any edits after this date.
 
 Your presentation must:
 
@@ -159,7 +159,7 @@ Your presentation must:
 
 **Tell us who will be attending**
 
-Up to [3 / 9] members of your project team can attend the interview. Please email their names to competitionenquiries@innovateuk.gov.uk by midday on [date]. We recommend that each organisation in your consortium is represented, if possible.
+Up to [3 / 9] members of your project team can attend the interview. Please email their names to [competitionenquiries@innovateuk.gov.uk](mailto:competitionenquiries@innovateuk.gov.uk) by midday on [date]. We recommend that each organisation in your consortium is represented, if possible.
 
 **Interview format**
 
