IFS-2397 Formatting update

--- a/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/ati-terms-and-conditions.html
+++ b/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/ati-terms-and-conditions.html
@@ -13,24 +13,32 @@
 
     <th:block th:insert="fragments/layout :: page-title"
               th:with="pageTitle='Terms and Conditions of an Innovate UK / Affinity Partner award ',size='heading-large'" />
-    <p>A. These terms and conditions, together with the <a href="http://www.ati.org.uk/funding/framework-agreement/">Affinity Partner Framework Agreement</a>, and Innovate UK’s
-        Policies apply to all organisations applying for award funding. This is either individually or in collaboration.
-        Each organisation must accept these terms and conditions before submitting an application.</p>
-    <p>B. If you are successful, you will receive an award letter confirming any project-specific conditions of the
-        award. This letter must be countersigned and uploaded by the organisation in the correct manner before the
-        project can start.</p>
-    <p>C. Transfer to UK Research and Innovation</p>
-    <p>In April 2018 changes will be made to the structure of the UK's research and innovation bodies (including
-        Innovate UK). A new body corporate will be established under the Higher Education and Research Act 2017 that
-        brings together the UK's 7 Research Councils, Innovate UK and a new organisation, Research England. This new
-        body will be known as UK Research and Innovation (UKRI).</p>
-    <p>With the establishment of UKRI, Innovate UK (formerly the Technology Strategy Board) will cease to exist as a
-        body corporate in its own right and will become a committee or 'Council' of UKRI. Innovate UK will continue to
-        administer contract and award funding and to manage the relationship with MSPs as a Council of</p>
-    <p>UKRI. However, existing contracts awarded by Innovate UK under the DPS will be transferred to UKRI under a
-        statutory transfer scheme and future contracts awarded under the DPS will be entered into by UKRI. More
-        information is available from the <a href="http://www.ukri.org/">UKRI website</a>.</p>
-
+    <ol class="list-alpha">
+        <li>
+            These terms and conditions, together with the <a href="http://www.ati.org.uk/funding/framework-agreement/">Affinity Partner Framework Agreement</a>, and Innovate UK’s
+            Policies apply to all organisations applying for award funding. This is either individually or in collaboration.
+            Each organisation must accept these terms and conditions before submitting an application.
+        </li>
+        <li>
+            If you are successful, you will receive an award letter confirming any project-specific conditions of the
+            award. This letter must be countersigned and uploaded by the organisation in the correct manner before the
+            project can start.
+        </li>
+        <li>
+            <p class="no-margin">Transfer to UK Research and Innovation</p>
+            <p>In April 2018 changes will be made to the structure of the UK's research and innovation bodies (including
+                Innovate UK). A new body corporate will be established under the Higher Education and Research Act 2017 that
+                brings together the UK's 7 Research Councils, Innovate UK and a new organisation, Research England. This new
+                body will be known as UK Research and Innovation (UKRI).</p>
+            <p>With the establishment of UKRI, Innovate UK (formerly the Technology Strategy Board) will cease to exist as a
+                body corporate in its own right and will become a committee or 'Council' of UKRI. Innovate UK will continue to
+                administer contract and award funding and to manage the relationship with MSPs as a Council of</p>
+            <p>UKRI. However, existing contracts awarded by Innovate UK under the DPS will be transferred to UKRI under a
+                statutory transfer scheme and future contracts awarded under the DPS will be entered into by UKRI. More
+                information is available from the <a href="http://www.ukri.org/">UKRI website</a>.</p>
+        </li>
+    </ol>
+    
     <h2 class="heading-medium">1. General terms and conditions</h2>
     <p>Innovate UK has the right to change these award terms and conditions unilaterally and at any time by giving 1
         month’s notice.</p>
