--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/grant-offer-letter.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/grant-offer-letter.html
@@ -102,7 +102,7 @@
                 <a th:if="${model.showSubmitButton}"
                    th:href="@{${#ifsUtil.formPostUri(#httpServletRequest)} + '/confirmation'}"
                    data-js-modal="modal-confirm-grant-offer-letter" class="button">Send to Innovate UK</a>
-                <button th:if="${model.grantOfferLetterSent and model.showDisabledSubmitButton}"
+                <button th:if="${model.showDisabledSubmitButton}"
                         disabled="disabled" class="button">Send to Innovate UK
                 </button>
             </th:block>
