IFS-2397 Updated type attribute on ordered list

--- a/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/ati-terms-and-conditions.html
+++ b/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/ati-terms-and-conditions.html
@@ -13,7 +13,7 @@
 
     <th:block th:insert="fragments/layout :: page-title"
               th:with="pageTitle='Terms and Conditions of an Innovate UK / Affinity Partner award ',size='heading-large'" />
-    <ol class="list-alpha">
+    <ol class="list-alpha" type="A">
         <li>
             These terms and conditions, together with the <a href="http://www.ati.org.uk/funding/framework-agreement/">Affinity Partner Framework Agreement</a>, and Innovate UK’s
             Policies apply to all organisations applying for award funding. This is either individually or in collaboration.
