IFS-2245 Content updates

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2245-interview-panel-dashboard.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2245-interview-panel-dashboard.html
@@ -50,7 +50,7 @@
             <li><a href="/prototypes/IFS-2247-invite-assessors">Invite assessors</a></li>
         </ul>
 
-        <p class="extra-margin-top">You can allocate applications to assessors once they have responded.</p>
+        <p class="extra-margin-top">You can allocate applications to assessors once they have both accepted their invite to the interview panel.</p>
 
         <ul class="link-list" th:classappend="${param.status != null and param.status[0] == 'noResponse'} ? form-hint">
             <li>
