--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-assign-applications.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-assign-applications.html
@@ -137,7 +137,7 @@
                     <td>Healthcare, Regnerative medicine, Stratified medicine</td>
                     <td>Empire Ltd</td>
                     <th:block th:if="${param.tab != null and param.tab[0] == 'view'}">
-                        <td>Pending</td>
+                        <td>Awaiting response</td>
                         <td><a href="/prototypes/IFS-2246-view-invite" class="button button-secondary">View invite</a></td>
                     </th:block>
                 </tr>
@@ -156,7 +156,7 @@
                     <td>Healthcare, Analytical science</td>
                     <td>Ideas</td>
                     <th:block th:if="${param.tab != null and param.tab[0] == 'view'}">
-                        <td>Pending</td>
+                        <td>Awaiting response</td>
                         <td><a href="/prototypes/IFS-2246-view-invite" class="button button-secondary">View invite</a></td>
                     </th:block>
                 </tr>
@@ -194,7 +194,7 @@
                     <td>Electronics, sensors &#38; photonics, Materials</td>
                     <td>Innovation</td>
                     <th:block th:if="${param.tab != null and param.tab[0] == 'view'}">
-                        <td><span class="no">Rejected</span></td>
+                        <td><span class="yes">Responded to feedback</span></td>
                         <td><a href="#/prototypes/IFS-2246-view-invite" class="button button-secondary">View invite</a></td>
                     </th:block>
                 </tr>
