--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2248-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2248-review-send.html
@@ -18,7 +18,7 @@
 
     <!-- HARDCODED PROTOTYPE HTML -->
 
-    <th:block th:insert="prototypes/fragments/comp-admin :: prototype-comp-admin-page-title-subheading(${'68: Technology inspired, competition closed'}, ${'Notify assessor and release feedback'}, ${null})" />
+    <th:block th:insert="prototypes/fragments/comp-admin :: prototype-comp-admin-page-title-subheading(${'68: Technology inspired, competition closed'}, ${'Notify assessor'}, ${null})" />
 
     <h2 class="heading-large" th:text="${name}">ASSESSOR NAME</h2>
 
@@ -140,7 +140,7 @@ Please visit our online Innovation Funding Service to respond to this request: [
             </p>
 
             <div class="extra-margin">
-                <a th:href="${'/prototypes/IFS-2248-assign-application-assessor?tab=assigned&#38;name='} + ${name}" class="button">Notify and release feedback</a>
+                <a th:href="${'/prototypes/IFS-2248-assign-application-assessor?tab=assigned&#38;name='} + ${name}" class="button">Notify</a>
                 <a th:href="${'/prototypes/IFS-2248-assign-application-assessor?tab=assignedd&#38;name='} + ${name}" class="button button-clear">Cancel</a>
             </div>
 
