IFS-2397 Ordered list update

--- a/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/ati-terms-and-conditions.html
+++ b/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/ati-terms-and-conditions.html
@@ -24,20 +24,19 @@
             award. This letter must be countersigned and uploaded by the organisation in the correct manner before the
             project can start.
         </li>
-        <li>
-            <p class="no-margin">Transfer to UK Research and Innovation</p>
-            <p>In April 2018 changes will be made to the structure of the UK's research and innovation bodies (including
-                Innovate UK). A new body corporate will be established under the Higher Education and Research Act 2017 that
-                brings together the UK's 7 Research Councils, Innovate UK and a new organisation, Research England. This new
-                body will be known as UK Research and Innovation (UKRI).</p>
-            <p>With the establishment of UKRI, Innovate UK (formerly the Technology Strategy Board) will cease to exist as a
-                body corporate in its own right and will become a committee or 'Council' of UKRI. Innovate UK will continue to
-                administer contract and award funding and to manage the relationship with MSPs as a Council of</p>
-            <p>UKRI. However, existing contracts awarded by Innovate UK under the DPS will be transferred to UKRI under a
-                statutory transfer scheme and future contracts awarded under the DPS will be entered into by UKRI. More
-                information is available from the <a href="http://www.ukri.org/">UKRI website</a>.</p>
-        </li>
     </ol>
+
+    <h2 class="heading-small">Transfer to UK Research and Innovation</h2>
+    <p>In April 2018 changes will be made to the structure of the UK's research and innovation bodies (including
+        Innovate UK). A new body corporate will be established under the Higher Education and Research Act 2017 that
+        brings together the UK's 7 Research Councils, Innovate UK and a new organisation, Research England. This new
+        body will be known as UK Research and Innovation (UKRI).</p>
+    <p>With the establishment of UKRI, Innovate UK (formerly the Technology Strategy Board) will cease to exist as a
+        body corporate in its own right and will become a committee or 'Council' of UKRI. Innovate UK will continue to
+        administer contract and award funding and to manage the relationship with MSPs as a Council of
+        UKRI. However, existing contracts awarded by Innovate UK under the DPS will be transferred to UKRI under a
+        statutory transfer scheme and future contracts awarded under the DPS will be entered into by UKRI. More
+        information is available from the <a href="http://www.ukri.org/">UKRI website</a>.</p>
 
     <h2 class="heading-medium">1. General terms and conditions</h2>
     <p>Innovate UK has the right to change these award terms and conditions unilaterally and at any time by giving 1
@@ -251,9 +250,10 @@
     <h2 class="heading-medium">13. Publication of information</h2>
     <p>Innovate UK encourages you to seek your own publicity. If you wish to publicise the project in any way
         whatsoever, please consult the Innovate UK guide ‘Publicising your project: guidelines from Innovate UK’
-        available on request from Innovate UK’s Press Office (pressoffice@innovateuk.gov.uk). You must also comply with
-        the Affinity Partner’s Press and Publications Guidelines as set out in the Framework Agreement. Please liaise
-        with <a href="mailto:media@ati.org.uk">media@ati.org.uk</a> on any publications you wish to make.</p>
+        available on request from Innovate UK’s Press Office (<a href="mailto:pressoffice@innovateuk.gov.uk">pressoffice@innovateuk.gov.uk</a>).
+        You must also comply with the Affinity Partner’s Press and Publications Guidelines as set out in the Framework
+        Agreement. Please liaise with <a href="mailto:media@ati.org.uk">media@ati.org.uk</a> on any publications you
+        wish to make.</p>
     <p>You give Innovate UK permission to use your name and logo to allow us to publicise the award.</p>
     <p>We will agree with you any requests for future publication by us of the progress of the project.</p>
 
