IFS-2763: Gross annual salary renamed to gross employee cost

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/fragments/finance-review-questions.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/fragments/finance-review-questions.html
@@ -109,7 +109,7 @@
 			<thead>
 				<tr>
 					<th scope="col" id="labour-role">Role within project</th>
-					<th scope="col" id="labour-gross-salary" class="numeric">Gross Annual Salary</th>
+					<th scope="col" id="labour-gross-salary" class="numeric">Gross employee cost</th>
 					<th scope="col" id="labour-rate" class="numeric">Rate (&pound;/day)</th>
 					<th scope="col" id="labour-days-spent" class="numeric">Days to be spent by all staff at this grade</th>
 					<th scope="col" id="labour-total-costs" class="numeric">Total costs</th>
@@ -891,7 +891,7 @@
 					<td colspan="2">Programmer</td>
 				</tr>
 				<tr>
-					<th scope="row">Gross annual salary</th>
+					<th scope="row">Gross employee cost</th>
 					<td>&pound;25,000</td>
 					<td colspan="2">&pound;25,000</td>
 				</tr>
